--- a/Style/style.css
+++ b/Style/style.css
@@ -37,17 +37,51 @@ main h1 {
   text-align: center;
 }
 
-.contenedor-imagenes {
-  text-align: center;
+.img-galeria{
+  width: 80%;
+  margin: 50px auto 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px,1fr));
+  gap: 30px;
 }
-
-img {
+.img-galeria img{
   width: 250px;
   height: 250px;
   border-radius: 10px;
-  margin: 20px;
+  cursor: pointer;
+  transition: 1s;
 }
 
+.img-galeria img:hover{
+  transform: scale(1.2);
+}
+
+.full-img{
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 99;
+}
+
+.full-img span{
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+}
+
+.full-img img{
+  width: 90%;
+  max-width: 300px;
+}
 footer {
   text-align: center;
 }
